deploy/nexodus/base/apiproxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiproxy
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: envoy
          image: envoyproxy/envoy:v1.25.1
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          command:
            - envoy
            - --config-path
            - /configs/envoy/envoy.yaml
            - --component-log-level
            - upstream:info,http:debug,router:debug,jwt:debug
          ports:
            - name: api-envoy
              protocol: TCP
              containerPort: 9090
            - name: metrics-envoy
              protocol: TCP
              containerPort: 9000
          volumeMounts:
            - name: envoy-config
              mountPath: /configs/envoy
            - name: envoy-unix-sockets
              mountPath: /sockets
          readinessProbe:
            httpGet:
              path: /ready
              port: 9000
            periodSeconds: 5
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /ready
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 100m
              memory: 200Mi
      restartPolicy: Always
      volumes:
        - name: envoy-config-template
          configMap:
            name: apiproxy-envoy-config
        - name: envoy-config
          emptyDir:
            medium: Memory
        - name: envoy-unix-sockets
          emptyDir:
            medium: Memory
