deploy/nexodus/base/apiproxy/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: apiproxy-lb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 443
      targetPort: 8443
