deploy/nexodus/base/apiproxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apiproxy
spec:
  ports:
    - name: admin
      port: 9000
      targetPort: 9000
    - name: web
      port: 8443
      targetPort: 8443
