deploy/nexodus/base/apiproxy/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apiproxy
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    route.openshift.io/termination: passthrough
    # see: https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/configmap/#proxy-read-timeout
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    # see: https://docs.openshift.com/container-platform/4.13/networking/routes/route-configuration.html#nw-configuring-route-timeouts_route-configuration
    haproxy.router.openshift.io/timeout: "3600s"
    haproxy.router.openshift.io/timeout-tunnel: "3600s"
spec:
  rules:
    - host: api.try.nexodus.127.0.0.1.nip.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: apiproxy
                port:
                  number: 8443
