deploy/nexodus/base/apiproxy/ingress-auth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    route.openshift.io/termination: passthrough
  name: auth
spec:
  rules:
    - host: auth.try.nexodus.127.0.0.1.nip.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: apiproxy
                port:
                  number: 8443
