deploy/nexodus/base/apiproxy/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    route.openshift.io/termination: passthrough
spec:
  rules:
    - host: try.nexodus.127.0.0.1.nip.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: apiproxy
                port:
                  number: 8443
